合并加载方法